--- a/views/book-detail.hbs
+++ b/views/book-detail.hbs
@@ -87,8 +87,8 @@
             <div class="rating-stars mb-2" id="ratingStars">
               {{#each (range 1 5)}}
                 <button type="button" class="btn btn-outline-warning btn-star" data-value="{{this}}">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24">
+                    <use xlink:href="/images/icons/ui/star.svg"></use>
                   </svg>
                 </button>
               {{/each}}
@@ -181,7 +181,7 @@
   
   async function checkCanReview() {
     try {
-      const response = await fetch(`/reviews/api/can-review/${bookId}`, {
+      const response = await fetch(`/api/reviews/can-review/${bookId}`, {
         credentials: 'include'
       });
       
@@ -231,7 +231,7 @@
   
   async function loadExistingReview(reviewId) {
     try {
-      const response = await fetch(`/reviews/api/${bookId}`, {
+      const response = await fetch(`/api/reviews/books/${bookId}`, {
         credentials: 'include'
       });
       
@@ -342,7 +342,7 @@
       submitBtn.disabled = true;
       submitBtn.innerHTML = '<span class="spinner-border spinner-border-sm"></span> Отправка...';
       
-      const response = await fetch(`/reviews/api/${bookId}`, {
+      const response = await fetch(`/api/reviews/books/${bookId}`, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
@@ -396,7 +396,7 @@
       deleteBtn.disabled = true;
       deleteBtn.innerHTML = '<span class="spinner-border spinner-border-sm"></span> Удаление...';
       
-      const response = await fetch(`/reviews/api/${currentReviewId}`, {
+      const response = await fetch(`/api/reviews/${currentReviewId}`, {
         method: 'DELETE',
         credentials: 'include'
       });
@@ -429,7 +429,7 @@
   
   async function loadReviews() {
     try {
-      const response = await fetch(`/reviews/api/${bookId}`);
+      const response = await fetch(`/api/reviews/books/${bookId}`);
       const result = await response.json();
       
       if (result.success) {
@@ -501,9 +501,17 @@
       // Создаем звезды для отображения рейтинга
       const starsHtml = Array(5).fill().map((_, i) => {
         if (i < review.rating) {
-          return '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#FFD700" viewBox="0 0 16 16"><path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/></svg>';
+          return `
+            <svg xmlns="http://www.w3.org/2000/svg" fill="#FFD700" width="16" height="16">
+              <use xlink:href="/images/icons/ui/star.svg"></use>
+            </svg>
+          `;
         } else {
-          return '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ddd" viewBox="0 0 16 16"><path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/></svg>';
+          return `
+            <svg xmlns="http://www.w3.org/2000/svg" fill="#ddd" width="16" height="16">
+              <use xlink:href="/images/icons/ui/star.svg"></use>
+            </svg>
+          `;
         }
       }).join('');
       
@@ -540,7 +548,7 @@
       button.disabled = true;
       button.innerHTML = '<span class="spinner-border spinner-border-sm"></span> Бронируем...';
       
-      const response = await fetch('/reservations/reserve', {
+      const response = await fetch('/api/reservations', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
