--- a/views/edit/books.hbs
+++ b/views/edit/books.hbs
@@ -40,9 +40,9 @@
           </form>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-success w-100" onclick="window.location.href='/edit/books/edit/new'">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-              <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+          <button type="button" class="btn btn-success w-100" onclick="window.location.href='/edit/books/new'">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16">
+              <use xlink:href="/images/icons/action/add.svg"></use>
             </svg>
             Добавить книгу
           </button>
@@ -99,16 +99,15 @@
                 </td>
                 <td class="text-end">
                   <button type="button" class="btn btn-sm btn-outline-primary me-2" 
-                          onclick="window.location.href='/edit/books/edit/{{this.id}}'">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                          onclick="window.location.href='/edit/books/{{this.id}}'">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="12" height="12">
+                      <use xlink:href="/images/icons/action/edit.svg"></use>
                     </svg>
                   </button>
                   <button type="button" class="btn btn-sm btn-outline-danger" 
                           onclick="deleteBook({{this.id}}, '{{this.title}}')">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                      <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="12" height="12">
+                      <use xlink:href="/images/icons/action/delete.svg"></use>
                     </svg>
                   </button>
                 </td>
@@ -203,7 +202,7 @@
     if (!currentBookId) return;
     
     try {
-      const response = await fetch(`/edit/books/${currentBookId}`, {
+      const response = await fetch(`/api/books/${currentBookId}`, {
         method: 'DELETE',
         headers: {
           'Content-Type': 'application/json',
