--- a/views/librarian/return.hbs
+++ b/views/librarian/return.hbs
@@ -180,7 +180,7 @@
     if (!currentLoanId) return;
     
     try {
-      const response = await fetch(`/librarian/return/${currentLoanId}`, {
+      const response = await fetch(`/api/returns/${currentLoanId}`, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
